clang/test/BSC/Negative/Generic/IncompleteTemplateParameters/incomplete_do_not_crash1.cbs
// RUN: %clang_cc1 -verify %s

struct S<T>{}; int c(){d<struct S<
// expected-error@-1 {{expected '>'}}
// expected-note@-2 {{to match this '<'}}
// expected-error@-3 {{expected '>'}}
// expected-note@-4 {{to match this '<'}}
// expected-note@-5 {{to match this '{'}}

// expected-error@+1 {{expected expression}}
// expected-error@+0 {{expected '}'}}
